feat: exam endpoint and integration tests
* feat: get /group-history

* chore: format

* fix: get_group_history_reflects_group_change_and_closes_previous_entry change date

* chore: format

* feat: exam endpoint and JwtAccessdenied handler

* chore: format

* feat: integration tests for exam endpoint

* fix: replace get(0) with getFirst() in StudentControllerIT